@@ -3,15 +3,9 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>io.takari</groupId>
-        <artifactId>takari</artifactId>
-        <version>27</version>
-    </parent>
-
     <groupId>com.walmartlabs.concord</groupId>
     <artifactId>parent</artifactId>
-    <version>1.102.1-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -72,8 +66,6 @@
 
         <scm.connection>scm:git:https://github.com/walmartlabs/concord.git</scm.connection>
 
-        <jdk.version>1.8.0</jdk.version>
-
         <docker.plugin.version>0.38.1</docker.plugin.version>
         <jooq.version>3.13.4</jooq.version>
         <junit.version>5.8.2</junit.version>
@@ -108,6 +100,15 @@
             </extension>
         </extensions>
         <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>license-maven-plugin</artifactId>
@@ -205,16 +206,6 @@
                     <groupId>org.jooq</groupId>
                     <artifactId>jooq-codegen-maven</artifactId>
                     <version>${jooq.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>io.takari.maven.plugins</groupId>
-                    <artifactId>takari-lifecycle-plugin</artifactId>
-                    <version>2.0.8</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <source>${maven.compiler.source}</source>
-                        <target>${maven.compiler.target}</target>
-                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -499,40 +490,10 @@
             </distributionManagement>
         </profile>
         <profile>
-            <id>jdk8</id>
+            <id>jdk17</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-            <properties>
-                <jdk.version>1.8</jdk.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk8-aarch64</id>
-            <properties>
-                <jdk.version>1.8</jdk.version>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk11</id>
-            <properties>
-                <jdk.version>11</jdk.version>
-                <failsafe.args>
-                    --add-opens java.base/java.util=ALL-UNNAMED
-                </failsafe.args>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk11-aarch64</id>
-            <properties>
-                <jdk.version>11</jdk.version>
-                <failsafe.args>
-                    --add-opens java.base/java.util=ALL-UNNAMED
-                </failsafe.args>
-            </properties>
-        </profile>
-        <profile>
-            <id>jdk17</id>
             <properties>
                 <jdk.version>17</jdk.version>
                 <failsafe.args>
